<resources>
    <string name="app_name">OurRecipes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_recipe">Add Recipe</string>
    <string name="edit_recipe_page_title_main">Recipe</string>
    <string name="edit_recipe_page_title_images">Images</string>
    <string name="edit_recipe_page_title_meta">Meta</string>
    <string name="edit_recipe_page_title_ingredients">Ingredients</string>
    <string name="edit_recipe_page_title_preparation">Preparation</string>
    <string name="edit_recipe_save">Save</string>
    <string name="edit_recipe_delete">Delete</string>
    <string name="recipe_saved">Recipe saved</string>
    <string name="edit_recipe_name">Name</string>
    <string name="edit_recipe_ingredients">Ingredients</string>
    <string name="edit_recipe_preparation_steps">Preparation Steps</string>
    <string name="edit_recipe_name_helper_text">Grandmas Sweet Unicorn</string>
    <string name="edit_recipe_ingredients_helper_text">1 tsp Sugar, 5 cups unicorn meat</string>
    <string name="edit_recipe_preparation_steps_helper_text">Boil water\nAdd unicorn meat</string>
    <string name="edit_recipe_image_description">Click to set an image description</string>
    <string name="edit_recipe_add_image">Add image</string>
    <string name="edit_recipe_name_error_empty">Please name the recipe</string>
    <string name="edit_recipe_image_deleted">Image deleted</string>
    <string name="edit_recipe_image_deleted_undo">UNDO</string>
    <string name="error_taking_picture">Error taking picture</string>
    <string name="no_camera_app_available">No camera available ¯\\_(ツ)_/¯</string>
    <string name="no_gallery_app_available">No gallery available ¯\\_(ツ)_/¯</string>
    <string name="error_saving_image">Error saving image</string>
    <string name="edit_recipe_notes">Notes</string>
    <string name="edit_recipe_notes_helper_text">Use it for some notes for yourself</string>
    <string name="edit_recipe_labels_helper_text">Comma separated list like "meat, Winter, x-mas"</string>
    <string name="edit_recipe_labels">Labels</string>
    <string name="edit_recipe_cover_image_radio_label">Set as cover image</string>
    <string name="edit_recipe_set_as_cover_image_button">Set as cover image</string>
    <string name="edit_recipe_delete_image_button">delete</string>
    <string name="action_edit_recipe">Edit recipe</string>
    <string name="action_edit_image">Edit image</string>
    <string-array name="edit_recipe_add_image_items">
        <item>Take Picture</item>
        <item>Select from Gallery</item>
        <item>Select from Whatever</item>
    </string-array>
    <string name="title_activity_view_recipe">View recipe</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_delete_recipe">Delete</string>
    <string name="view_recipe_ingredients">Ingredients</string>
    <string name="view_recipe_preparation_steps">Preparation Steps</string>
    <string name="view_recipe_notes">Notes</string>
    <string name="edit_leave_confirm_headline">Save changes?</string>
    <string name="edit_leave_confirm_text">You have unsaved changes. Do you want to save them?</string>
    <string name="edit_leave_confirm_button_yes">Yes</string>
    <string name="edit_leave_confirm_button_no">No</string>
    <string name="edit_leave_confirm_button_stay">Stay</string>
    <string name="dialog_view_image_title">Image %1$d of %2$d</string>
    <string name="edit_image_title">Edit image %1$d of %2$d</string>
    <string name="edit_image_description">Image Description</string>
    <string name="not_labeled">Not labeled</string>
    <string name="favorites">Favorites</string>
    <string name="recipes">Recipes</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_licenses">Licenses</string>
    <string name="pref_header_cooking_mode">Cooking Mode</string>
    <string name="pref_title_cooking_mode_display_on">Keep display on</string>
    <string name="pref_key_cooking_mode_display_on">cooking_mode_display_on</string>
    <string name="pref_description_cooking_mode_display_on">Prevents the display from fading black while cooking</string>
    <string name="pref_header_about">About</string>
    <string name="pref_title_licences">Licences</string>
    <string name="pref_title_version">OurRecipes</string>
    <string name="pref_description_version">Version 1.0</string>
    <string name="licenses_cooking_icon">The cooking icon made by <a href="http://www.freepik.com/">Freepik</a> from www.flaticon.com (http://www.flaticon.com/free-icon/pot_174407)</string>
    <string name="licenses_launcher_icon_recipes">The launcher icon made by <a href="http://www.freepik.com/">Freepik</a> from www.flaticon.com (http://www.flaticon.com/free-icon/recipes_242428)</string>
    <string name="licenses_launcher_icon">The launcher icon made by <a href="http://www.vectorsmarket.com/">Vectors Market</a> from www.flaticon.com (http://www.flaticon.com/free-icon/cooker_186147)</string>
    <string name="licenses_cooking_icon_headline">Icons</string>
    <string name="licenses_other_headline">Other</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="sign_in_description">To use the backup functionality you have to sign in with your Google Account.</string>
    <string name="sign_in_current_account_headline">Signed in with</string>
    <string name="backup_google_drive_start_backup">Start Backup</string>
    <string name="backup_google_drive_show_last_run_information">Show Details</string>
    <string name="backup_google_drive_last_backup_completed_at">Last backup completed at: %s</string>
    <string name="backup_google_drive_description">Backing up your data to Google Drive allows you to restore all your recipes on a new device.</string>
</resources>