<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.schmaun.ourrecipes.EditRecipeActivity$EditRecipeMainFragment">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edit_recipe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:hint="@string/edit_recipe_name"
        android:inputType="text"
        app:met_floatingLabel="highlight"
        app:met_helperText="@string/edit_recipe_name_helper_text"
        app:met_helperTextAlwaysShown="true"
        app:met_validateOnFocusLost="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_marginBottom="@dimen/activity_horizontal_margin"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:id="@+id/edit_recipe_ingredients"
        android:hint="@string/edit_recipe_ingredients"
        android:layout_below="@+id/edit_recipe_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:minLines="2"
        android:gravity="top"
        app:met_floatingLabel="highlight"
        app:met_helperText="@string/edit_recipe_ingredients_helper_text"
        app:met_helperTextAlwaysShown="true"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/edit_recipe_preparation"
        android:hint="@string/edit_recipe_preparation_steps"
        android:layout_below="@+id/edit_recipe_ingredients"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:minLines="2"
        android:gravity="top"
        app:met_floatingLabel="highlight"
        app:met_helperText="@string/edit_recipe_preparation_steps_helper_text"
        app:met_helperTextAlwaysShown="true"
        />

</RelativeLayout>
