<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.schmaun.ourrecipes.LicensesActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/licenses_cooking_icon_headline"
        android:textAppearance="@style/RecipeView.Settings.Licences.Headline" />

    <TextView
        android:id="@+id/licenses_cooking_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/licenses_cooking_icon"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        />
    <TextView
        android:id="@+id/licenses_launcher_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/licenses_launcher_icon"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/licenses_other_headline"
        android:textAppearance="@style/RecipeView.Settings.Licences.Headline" />
    <TextView
        android:id="@+id/licenses_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        />
</LinearLayout>
