<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/sign_in_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:ellipsize="end"
        android:textAppearance="@style/RecipeView.Text"
        android:text="@string/sign_in_description"
        />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:buttonSize="wide"
        />


    <TextView
        android:id="@+id/sign_in_current_account_headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_current_account_headline"
        android:textAppearance="@style/RecipeView.Headline"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/sign_in_current_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:ellipsize="end"
        android:textAppearance="@style/RecipeView.Text"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:visibility="gone"
        />
</LinearLayout>